# open-warp

app/: Cargo.toml
app/src/ai/agent_sdk/: driver.rs  mod.rs
app/src/auth/: auth_state.rs
app/src/autoupdate/: linux.rs  mac.rs  windows.rs
app/src/server/server_api/: auth.rs
app/src/workspaces/: user_workspaces.rs
crates/warp_core/src/channel/: mod.rs
crates/warp_proxy_server/: Cargo.toml
crates/warp_proxy_server/src/: config.rs  lib.rs  login.rs  tools.rs  translate.rs
crates/warp_proxy_server/src/providers/: anthropic.rs  mod.rs
script/: run
script/macos/: run
