[package]
name = "warp_proxy_server"
edition = "2024"
description = "Self-hosted proxy that speaks Warp's multi-agent API and routes requests to user-supplied LLM providers (Ollama, Anthropic, OpenAI-compatible)."
publish.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "open-warp-proxy"
path = "src/bin/open-warp-proxy.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
env_logger.workspace = true
futures-util.workspace = true
log.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
warp_multi_agent_api.workspace = true
